fix: kotlin compile on jdk17 - https://youtrack.jetbrains.com/issue/KT-44266